--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div id="option" class="option">
 
             </div>
-            <div style="margin-top: 70px; font-size: 40px; font-weight: bold; text-align: center; color: yellow;">Score: <span id="score">0</span></div>
+            <div style="margin-top: 70px; font-size: 40px; font-weight: bold; text-align: center; color:rgb(11, 188, 67);">Score: <span id="score">0</span></div>
         </div>
      </div>
    </div>
